# gemma-jax

./: .gitignore  README.md  benchmark.py  layers.py  pyproject.toml
attention/: attention.py  test_attention.py
gemma3/: README.md  gemma3.py
models/: README.md  gemma3.py  test_gemma3.py
module/: attention.py  block.py  config.py  embedder.py  mlp.py  rms.py  rope_simple.py  test_attention.py  test_mlp.py  transformer.py  util.py
module/attention/: attention.py  test_attention.py
module/block/: mlp.py
module/nn/: block.py  test_mlp.py
module/norm/: rsm.py
rope/: rope_simple.py  test_rope_simple.py
ropy.py/: rope_simple.py
